--- a/WebApplication1/Views/Student/Index.cshtml
+++ b/WebApplication1/Views/Student/Index.cshtml
@@ -6,31 +6,76 @@
 
 <h2>Index</h2>
 
+<br />
+
+<button class="btnAdd" ng-click="addStudentDiv()">Add Student </button>
+<br/>
+
 <div ng-app="myapp">
     <div ng-controller="StudentCtrl">
         <table class="table table-striped table-bordered table-hover table-checkable datatable">
             <thead class="grid-top-panel">
-            <tr>
-                <th>StudentID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-                <th>Address</th>
-            </tr>
+                <tr>
+                    <th>StudentID</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Address</th>
+                </tr>
             </thead>
-            <tbody>
-            <tr ng-repeat="dataModel in students track by $index">
-                <td>{{dataModel.StudentID}}</td>
-                <td>{{dataModel.FirstName}}</td>
-                <td>{{dataModel.LastName}}</td>
-                <td>{{dataModel.Email}}</td>
-                <td>{{dataModel.Address}}</td>
-            </tr>
-            </tbody>
+            
+                <tr ng-repeat="dataModel in students track by $index">
+                    <td>{{dataModel.StudentID}}</td>
+                    <td>{{dataModel.FirstName}}</td>
+                    <td>{{dataModel.LastName}}</td>
+                    <td>{{dataModel.Email}}</td>
+                    <td>{{dataModel.Address}}</td>
+                </tr>
         </table>
+        <div >
+            <p class="divHead">Add Student</p>
+            <table>
+                <tr>
+                    <td><b>Student Id</b></td>
+                    <td>
+                        <input type="text" disabled="disabled" ng-model="studentId" />
+                    </td>
+                </tr>
+                <tr>
+                    <td><b>First Name</b></td>
+                    <td>
+                        <input type="text" ng-model="firstName" />
+                    </td>
+                </tr>
+                <tr>
+                    <td><b>Last Name</b></td>
+                    <td>
+                        <input type="text" ng-model="lastname" />
+                    </td>
+                </tr>
+                <tr>
+                    <td><b>Email</b></td>
+                    <td>
+                        <input type="text" ng-model="email" />
+                    </td>
+                </tr>
+                <tr>
+                    <td><b>Address</b></td>
+                    <td>
+                        <input type="text" ng-model="address" />
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <input type="button" class="btnAdd" value="Save" ng-click="AddUpdateStudent()"/>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
+        
 <script src="~/Scripts/angular.min.js"></script>
 <script src="~/ScriptsNg/app.js"></script>
 <script src="~/ScriptsNg/StudentController.js"></script>
-<script src="~/ScriptsNg/StudentService.js"></script>  
+<script src="~/ScriptsNg/StudentService.js"></script>
