--- a/WebApplication1/Views/Student/Index.cshtml
+++ b/WebApplication1/Views/Student/Index.cshtml
@@ -25,51 +25,68 @@
             </thead>
             
                 <tr ng-repeat="dataModel in students track by $index">
-                    <td>{{dataModel.StudentID}}</td>
+                    <td><a ng-click="editStudent(dataModel)">{{dataModel.StudentID}}</a></td>
                     <td>{{dataModel.FirstName}}</td>
                     <td>{{dataModel.LastName}}</td>
                     <td>{{dataModel.Email}}</td>
                     <td>{{dataModel.Address}}</td>
                 </tr>
         </table>
-        <div >
-            <p class="divHead">Add Student</p>
+        <div class="row">
+            <div class="col-lg-12">
+                <form>
+                    <div class="form-group">
+                        <label>Student Id</label>
+                        <input class="form-control" disabled type="text"  ng-model="student.studentId" />
+                    </div>
+                    <div class="form-group">
+                        <label>First Name</label>
+                        <input class="form-control" type="text"  ng-model="student.firstName" />
+                    </div>
+
+                    <div class="form-group">
+                        <label>Last Name</label>
+                        <input class="form-control" type="text" ng-model="student.lastname"/>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input class="form-control" type="text"   ng-model="student.email"/>
+                    </div>
+
+                    
+                    <div class="form-group">
+                        <label>Address</label><span class="text-default"><i>- Optional</i></span>  
+                        <input class="form-control" type="text"   ng-model="student.address"/>
+                    </div>
+
+
+                    
+                    <div class="form-group">
+                        <input type="button" class="btn btn-primary" value="Save" ng-click="addStudent(student)" />
+                    </div>
+
+
+                </form>
+
+            </div>
             <table>
-                <tr>
-                    <td><b>Student Id</b></td>
-                    <td>
-                        <input type="text" disabled="disabled" ng-model="studentId" />
-                    </td>
-                </tr>
-                <tr>
-                    <td><b>First Name</b></td>
-                    <td>
-                        <input type="text" ng-model="firstName" />
-                    </td>
-                </tr>
-                <tr>
-                    <td><b>Last Name</b></td>
-                    <td>
-                        <input type="text" ng-model="lastname" />
-                    </td>
-                </tr>
-                <tr>
-                    <td><b>Email</b></td>
-                    <td>
-                        <input type="text" ng-model="email" />
-                    </td>
-                </tr>
-                <tr>
-                    <td><b>Address</b></td>
-                    <td>
-                        <input type="text" ng-model="address" />
-                    </td>
-                </tr>
+     
+   
+    
                 <tr>
                     <td colspan="2">
-                        <input type="button" class="btnAdd" value="Save" ng-click="AddUpdateStudent()"/>
                     </td>
                 </tr>
+            @*    <tbody ng-repeat="emp in emparr">
+                    <tr>
+                        <td ng-bind="emp.arr_studentId"></td>
+                        <td ng-bind="emp.arr_firstName"></td>
+                        <td ng-bind="emp.arr_lastName"></td>
+                        <td ng-bind="emp.arr_email"></td>
+                        <td ng-bind="emp.arr_address"></td>
+                    </tr>
+                </tbody>*@
             </table>
         </div>
     </div>
